--- a/js/templates/treatment-entry.tpl.html
+++ b/js/templates/treatment-entry.tpl.html
@@ -25,10 +25,15 @@
         <div class="col-xs-8 col-sm-9 col-lg-10">
             <form name="entryform">
                 <div
+                        context-menu
+                        data-target="menu-{{ row.id }}"
+                        ng-class="{ 'highlight': highlight, 'expanded' : expanded }"
                         keyboard-focus focusable=".catalog-entry"
                         active="{{dc.catalog.entries.length && dc.catalog.id == row.id && dc.showCatalog}}"
-                        class="row treatment-row" treatment-row ng-repeat="row in entry.rows | orderBy:'id'"
+                        class="row treatment-row" treatment-row
+                        ng-repeat-start="row in entry.rows | orderBy:'id'"
                         ng-class="{locked: row.locked}" ng-hide="row.deleted">
+                    <pre>{{row.id}}</pre>
                     <span class="label locked-warning" ng-class="'mandator-' + row.lockedBy.id + '-warning'"
                           ng-show="row.locked">Gesperrt von {{row.lockedBy.name}}</span>
                     <treatment-column ng-repeat="column in row.columns"
@@ -52,6 +57,16 @@
                         </div>
                     </div>
 
+                </div>
+                <div class="dropdown position-fixed context-menu" id="menu-{{ row.id }}" ng-repeat-end>
+                    <ul class="dropdown-menu" role="menu">
+                        <li>
+                            <a class="pointer" role="menuitem" tabindex="1"
+                               ng-click="dc.removeRow(row, entry, treatment.entries);">
+                                {{'DELETE_ROW' | translate}}
+                            </a>
+                        </li>
+                    </ul>
                 </div>
             </form>
         </div>
