--- a/css/custom.css
+++ b/css/custom.css
@@ -2,6 +2,26 @@
     color: black;
 }
 
+.treatments {
+    padding-left: 0px;
+    padding-right: 0px;
+    padding-top: 70px;
+    height: 100%;
+    overflow-y: auto;
+}
+
+.treatments > .panel {
+    padding-right: 15px;
+}
+
+html, body, .container-fluid, .container-fluid > .row-fluid {
+    height: 100%;
+}
+
+.sidebar {
+    padding-top: 15px;
+}
+
 .treatment .form-control.ng-invalid,
 .treatment .form-control.ng-invalid:focus {
     border-color: red;
@@ -42,19 +62,19 @@
 .container-fluid {
     padding-left: 0;
     padding-right: 0;
-    padding-top: 70px;
 }
 
 .toolbar-wrapper {
     top: 0;
     position: fixed;
-    width: 100%;
+    width: 66.66%;
     z-index: 99;
     background-color: white;
 }
 
 .toolbar {
-    margin: 5px 15px;
+    /*margin: 5px 15px;*/
+    margin: 0;
     background-color: #fff;
     border: 1px solid #ddd;
     border-radius: 4px;
@@ -855,7 +875,7 @@ h5.list-group-item.preset {
 }
 
 @media (min-width: 1060px) {
-    .container-fluid {
+    .treatments {
         padding-top: 50px;
     }
 }
