--- a/js/templates/treatment-entry.tpl.html
+++ b/js/templates/treatment-entry.tpl.html
@@ -16,13 +16,15 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-xs-4 col-sm-3 col-lg-2">
+        <div class="col-xs-12">
             <div class="form-group">
-                <span>{{entry.type.name}}</span>
+                <span class="entry-type-name">{{entry.type.name}}</span>
             </div>
             <!--<treatment-type entry="entry"></treatment-type>-->
         </div>
-        <div class="col-xs-8 col-sm-9 col-lg-10">
+    </div>
+    <div class="row">
+        <div class="col-xs-12">
             <form name="entryform">
                 <div ng-repeat="row in entry.rows | orderBy:'id'"
                      class="treatment-row">
@@ -76,5 +78,6 @@
 
             </form>
         </div>
+    </div>
     </div>
 </li>
