--- a/css/custom.css
+++ b/css/custom.css
@@ -2,8 +2,12 @@
     color: black;
 }
 
+.container-fluid {
+    padding-top: 15px;
+}
+
 .treatments {
-    padding-left: 0px;
+    padding-left: 15px;
     padding-right: 0px;
     padding-top: 70px;
     height: 100%;
@@ -12,6 +16,7 @@
 
 .treatments > .panel {
     padding-right: 15px;
+    margin-bottom: 0;
 }
 
 html, body, .container-fluid, .container-fluid > .row-fluid {
@@ -19,12 +24,16 @@ html, body, .container-fluid, .container-fluid > .row-fluid {
 }
 
 .sidebar {
-    padding-top: 15px;
+    /*padding-top: 15px;*/
 }
 
 .treatment .form-control.ng-invalid,
 .treatment .form-control.ng-invalid:focus {
     border-color: red;
+}
+
+.form-control.numeric {
+    text-align: right;
 }
 
 .centered {
@@ -65,11 +74,13 @@ html, body, .container-fluid, .container-fluid > .row-fluid {
 }
 
 .toolbar-wrapper {
-    top: 0;
+    top: 15px;
     position: fixed;
     width: 66.66%;
     z-index: 99;
     background-color: white;
+    padding-right: 15px;
+    margin-left: -1px;
 }
 
 .toolbar {
@@ -879,13 +890,20 @@ treatment-column:last-of-type .treatment-column{
     /*min-height: 30px;*/
     /*padding: 3px 6px;*/
     /*background-color: rgba(250, 250, 250, 0.9);*/
-    border: 0;
+    border-width: 0;
     box-shadow: none;
     padding: 0px 6px;
 }
 
 .treatment-column:first-child  .read-only-content{
     padding-left: 0;
+}
+
+treatment.editable .treatment-column .read-only-content{
+    border-width: 1px;
+    padding: 3px 6px;
+    min-height: 30px;
+    background-color: rgba(250, 250, 250, 0.9);
 }
 
 .placeholder-text::before {
