fixed the display of the total, again

--- a/js/templates/treatment-toolbar.tpl.html
+++ b/js/templates/treatment-toolbar.tpl.html
@@ -8,7 +8,7 @@
                 <p ng-show="vm.treatments.length"
                    translate="FROM_TO_TOTAL"
                    translate-value-from="{{currentPage?(currentPage-1)*vm.limit+1 : 1}}"
-                   translate-value-to="{{currentPage?(currentPage)*vm.limit : vm.limit}}"
+                   translate-value-to="{{Math.min(vm.filteredTreatments.length, currentPage?(currentPage)*vm.limit : vm.limit)}}"
                    translate-value-total="{{vm.filteredTreatments.length}}"
                    ></p>
             </div>
