Inserted Medilist first draft

--- a/css/custom.css
+++ b/css/custom.css
@@ -2,6 +2,10 @@
     color: black;
 }
 
+.hiddenRow2 {
+    padding: 4px !important;
+}
+
 .treatments {
     padding-left: 0px;
     padding-right: 0px;
