--- a/css/custom.css
+++ b/css/custom.css
@@ -9,14 +9,33 @@
 .treatments {
     padding-left: 15px;
     padding-right: 0px;
-    padding-top: 70px;
+    /*padding-top: 70px;*/
     height: 100%;
-    overflow-y: auto;
 }
 
 .treatments > .panel {
-    padding-right: 15px;
+    /*padding-right: 15px;*/
     margin-bottom: 0;
+    height: 85%;
+}
+
+.treatments > .panel > .row {
+    height: 100%;
+    position: relative;
+}
+
+.treatments-container {
+    height: 100%;
+    overflow-y: auto;
+    padding-right: 15px;
+}
+
+.treatment-sidebar {
+    position: absolute;
+    height: 100%;
+    overflow-y: auto;
+    width: 300px;
+    right: 10px;
 }
 
 html, body, .container-fluid, .container-fluid > .row-fluid {
@@ -74,13 +93,15 @@ html, body, .container-fluid, .container-fluid > .row-fluid {
 }
 
 .toolbar-wrapper {
-    top: 15px;
-    position: fixed;
-    width: 66.66%;
+    /*position: fixed;*/
+    /*width: 66.66%;*/
     z-index: 99;
     background-color: white;
-    padding-right: 15px;
+    /*padding-right: 15px;*/
     margin-left: -1px;
+    margin-right: -1px;
+    margin-top: -1px;
+    margin-bottom: 15px;
 }
 
 .toolbar {
@@ -760,7 +781,7 @@ p:last-child {
 }
 
 .type-and-preset-list {
-    position: absolute;
+    /*position: absolute;*/
     /*padding-right: 15px;*/
     /*padding-left: 15px;*/
     width: 100%;
@@ -787,9 +808,9 @@ a.focused {
     overflow-y: scroll;
 }
 
-.list-group-row {
-    width: 100%;
-}
+/*.list-group-row {*/
+    /*width: 100%;*/
+/*}*/
 
 h5.list-group-item {
     margin-top: 3px;
@@ -927,6 +948,6 @@ treatment.editable .treatment-column .read-only-content{
 
 @media (min-width: 1060px) {
     .treatments {
-        padding-top: 50px;
+        /*padding-top: 50px;*/
     }
 }
