--- a/css/custom.css
+++ b/css/custom.css
@@ -16,7 +16,7 @@
 .treatments > .panel {
     padding-right: 15px;
     margin-bottom: 0;
-    height: 85%;
+    height: 100%;
 }
 
 .treatments > .panel > .row {
@@ -24,10 +24,14 @@
     position: relative;
 }
 
-.treatments-container {
+.limit-height {
     height: 100%;
+}
+
+.treatments-container {
+    height: 90%;
     overflow-y: auto;
-    padding-right: 15px;
+    /*padding-right: 15px;*/
 }
 
 .treatment-sidebar {
@@ -38,8 +42,13 @@
     right: 10px;
 }
 
-html, body, .container-fluid, .container-fluid > .row-fluid {
+html, body,  .container-fluid > .row-fluid {
     height: 100%;
+}
+
+.container-fluid {
+    height: 98%;
+    overflow: hidden;
 }
 
 .sidebar {
@@ -113,6 +122,7 @@ html, body, .container-fluid, .container-fluid > .row-fluid {
     -webkit-box-shadow: none;
     box-shadow: none;
     padding: 5px 15px;
+    margin-right: -15px;
 }
 
 .toolbar p {
@@ -540,7 +550,7 @@ span.checkmark {
 .editor-toolbar {
     position: absolute;
     z-index: 90;
-    right: 15px;
+    left: 3px;
 }
 
 .entry-toolbar .btn-group,
@@ -782,6 +792,15 @@ p:last-child {
 
 .type-and-preset {
     position: relative;
+}
+
+.type-and-preset.inactive:before {
+    content: ' ';
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255,255,255,0.4);
+    position: absolute;
+    z-index: 999;
 }
 
 .type-and-preset-list {
