--- a/js/templates/main.tpl.html
+++ b/js/templates/main.tpl.html
@@ -23,7 +23,7 @@
                         <div class="row limit-height">
 
                             <div class="treatments-container col-sm-12 col-md-8">
-                                <div class="type-and-preset-trigger-button">
+                                <div class="type-and-preset-trigger-button hidden-md hidden-lg">
                                     <a href ng-click="vm.showTypeAndPresetWidget = !vm.showTypeAndPresetWidget"
                                             >Behandlungstitel
                                         & Strukturen</a>
