some more style changes

--- a/js/templates/main.tpl.html
+++ b/js/templates/main.tpl.html
@@ -6,8 +6,8 @@
 
                 <div class="type-and-preset-trigger-button hidden-md hidden-lg">
                     <a href ng-click="vm.showTypeAndPresetWidget = !vm.showTypeAndPresetWidget"
-                            >Behandlungstitel
-                        & Strukturen</a>
+                            ><span>Behandlungstitel
+                        & Strukturen</span></a>
 
                 </div>
 
