--- a/js/templates/medication-widget.tpl.html
+++ b/js/templates/medication-widget.tpl.html
@@ -1,10 +1,40 @@
-    <div class="panel panel-primary">
-        <div class="panel-heading">
-            <h4>Medi-Liste</h4>
-        </div>
-        <div class="list-group">
-            <a href class="list-group-item">Ein Medi</a>
-            <a href class="list-group-item">Ein anderes Medi</a>
-            <a href class="list-group-item">Ein drittes Medi</a>
-        </div>
+<div class="panel panel-info">
+    <div class="panel-heading">
+        <h4>Mediplan</h4>
     </div>
+    <table class="table table-hover">
+        <thead>
+        <tr>
+            <th>Medikament</th>
+            <th>Dosierung</th>
+            <th>von / bis</th>
+            <th>Einnahmetext</th>
+            <th>Indikation</th>
+            <th>Typ</th>
+            <th>Verordnet durch</th>
+        </tr>
+        </thead>
+        <tbody ng-repeat="medication in vm.medicationList">
+        <tr data-toggle="collapse" data-target="#demo{{$index}}" class="accordion-toggle">
+            <td>{{medication.productName}}</td>
+            <td>{{medication.dosage}}</td>
+            <td>{{medication.indication}}</td>
+            <td>{{medication.medicationDate}}</td>
+        </tr>
+        <tr>
+            <td colspan="4" class="hiddenRow2">
+                <div class="accordion-body collapse" id="demo{{$index}}">
+                    <table class="table table-striped">
+                        <tr ng-repeat="history in medication.history">
+                            <td>{{history.productName}}</td>
+                            <td>{{history.dosage}}</td>
+                            <td>{{history.indication}}</td>
+                            <td>{{history.medicationDate}}</td>
+                        </tr>
+                    </table>
+                </div>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+</div>
