--- a/css/custom.css
+++ b/css/custom.css
@@ -14,7 +14,7 @@
 }
 
 .treatments > .panel {
-    padding-right: 15px;
+    /*padding-right: 15px;*/
     margin-bottom: 0;
     height: 100%;
 }
@@ -118,12 +118,12 @@ html, body,  .container-fluid > .row-fluid {
     /*margin: 5px 15px;*/
     margin: 0;
     background-color: #fff;
-    border: 1px solid #ddd;
-    border-radius: 4px;
+    border: 1px solid #bbb;
+    /*border-radius: 4px;*/
     -webkit-box-shadow: none;
     box-shadow: none;
-    padding: 5px 15px;
-    margin-right: -15px;
+    padding: 2px 10px;
+    /*margin-right: -15px;*/
 }
 
 .toolbar p {
@@ -884,7 +884,7 @@ h5.list-group-item.preset {
     -webkit-border-radius: 10px;
     border-radius: 3px;
     background: rgba(100, 100, 100, 0.6);
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+    /*-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);*/
 }
 
 ::-webkit-scrollbar-thumb:window-inactive {
@@ -976,19 +976,19 @@ treatment.editable .treatment-column .read-only-content{
     }
 }
 
-.type-and-preset-trigger-button {
-    position: absolute;
-    right: 0;
-    top: 35px;
-    width: 20px;
-    height: 100%;
-    border-left: 1px solid rgba(0, 0, 0, 0.16);
-    border-top: 1px solid rgba(0, 0, 0, 0.16);
-    z-index: 99;
-    background-color: white;
-}
+/*.type-and-preset-trigger-button {*/
+    /*position: absolute;*/
+    /*right: 0;*/
+    /*top: 35px;*/
+    /*width: 20px;*/
+    /*height: 100%;*/
+    /*border-left: 1px solid rgba(0, 0, 0, 0.16);*/
+    /*border-top: 1px solid rgba(0, 0, 0, 0.16);*/
+    /*z-index: 99;*/
+    /*background-color: white;*/
+/*}*/
 
-.type-and-preset-trigger-button a span {
+.type-and-preset-trigger-button-span {
     height: 200px;
     width: 200px;
     -webkit-transform: translate(20px,0) rotate(90deg);
