--- a/js/templates/main.tpl.html
+++ b/js/templates/main.tpl.html
@@ -4,12 +4,10 @@
 
             <div class="panel panel-default">
 
-                <div class="type-and-preset-trigger-button hidden-md hidden-lg">
-                    <a href ng-click="vm.showTypeAndPresetWidget = !vm.showTypeAndPresetWidget"
-                            ><span>Behandlungstitel
-                        & Strukturen</span></a>
-
-                </div>
+                <!--<div class="type-and-preset-trigger-button hidden-md hidden-lg">-->
+                    <!--<a href ng-click="vm.showTypeAndPresetWidget = !vm.showTypeAndPresetWidget">-->
+                        <!--<span>Behandlungstitel & Strukturen</span></a>-->
+                <!--</div>-->
 
 
                 <treatment-toolbar></treatment-toolbar>
@@ -29,7 +27,7 @@
                 <div class="row limit-height">
                     <div class="col-sm-12 limit-height">
                         <div class="row limit-height">
-                            <div class="treatments-container col-sm-12 col-md-8">
+                            <div class="treatments-container col-xs-11 col-lg-9">
 
 
 
@@ -70,16 +68,30 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="hidden-xs hidden-sm col-md-4">
-                                <div class="panel panel-primary">
-                                    <div class="panel-heading">
-                                        Menu
+                            <div class="hidden-xs hidden-sm hidden-md col-lg-3">
+                                <div class="panel panel-default">
+                                    <div class="toolbar-wrapper">
+                                        <div class="toolbar" ng-class="'mandator-' + vm.user.mandator.id + '-toolbar'" ng-cloak>
+                                            <div class="row">
+                                                <div class="col-xs-12"><p>Titel & Strukturen</p></div>
+                                            </div>
+                                        </div>
                                     </div>
                                     <type-and-preset-widget></type-and-preset-widget>
                                 </div>
 
                             </div>
-                            <div class="hidden-md hidden-lg">
+                            <div class="hidden-lg col-xs-1">
+                                <!--<div>-->
+                                    <!--<a href ng-click="vm.showTypeAndPresetWidget = !vm.showTypeAndPresetWidget">-->
+                                        <!--<span class="type-and-preset-trigger-button-span">Behandlungstitel & Strukturen</span>-->
+                                    <!--</a>-->
+                                <!--</div>-->
+
+                                <div class="type-and-preset-trigger-button-span" ng-click="vm.showTypeAndPresetWidget = !vm.showTypeAndPresetWidget">
+                                    Titel & Strukturen
+                                </div>
+
                                 <div ng-show="vm.showTypeAndPresetWidget || vm.temporarilyShowTypeAndPresetWidget"
                                      achilles-widget
                                      widget-width="300"
@@ -109,17 +121,17 @@
             <div class="btn-group">
                 <a class="btn btn-info">L</a>
             </div>
-            <div class="btn-group">
-                <a class="btn btn-info" ng-click="vm.showTypeAndPresetWidget = !vm.showTypeAndPresetWidget">T&P</a>
-            </div>
+            <!--<div class="btn-group">-->
+                <!--<a class="btn btn-info" ng-click="vm.showTypeAndPresetWidget = !vm.showTypeAndPresetWidget">T&P</a>-->
+            <!--</div>-->
             <div achilles-widget
-                 widget-width="30%"
+                 widget-width="80%"
                  widget-align-to-element="#show-medication-widget"
                  ng-show="vm.showMedicationWidget || false">
                 <medication-widget></medication-widget>
             </div>
         </div>
-        <div class="col-md-5 hidden-sm hidden-xs sidebar">
+        <div class="col-md-5 hidden-sm hidden-xs">
             <div class="row">
                 <div class="col-sm-12">
                     <medication-widget></medication-widget>
