--- a/js/templates/medication-widget.tpl.html
+++ b/js/templates/medication-widget.tpl.html
@@ -4,7 +4,7 @@
     <div class="toolbar-wrapper">
         <div class="toolbar" ng-class="'mandator-' + vm.user.mandator.id + '-toolbar'" ng-cloak>
             <div class="row">
-                <div class="col-xs-12"><p>Medikamentenplan</p></div>
+                <div class="col-xs-12"><p><strong>Medikamentenplan</strong></p></div>
             </div>
         </div>
     </div>
